# RandomStuff

./: README.md
DeepLearning/: README.md
DeepLearning/src/: Activation.cpp  Activation.h  Backpropagation.cpp  Backpropagation.h  BackpropagationThroughTime.cpp  BackpropagationThroughTime.h  Benchmark.h  Convolution.cpp  Convolution.h  Image.cpp  Image.h  ImageFeatureExtractor.cpp  ImageFeatureExtractor.h  LSTMCell.cpp  LSTMCell.h  LSTMNet.cpp  LSTMNet.h  MainTest.cpp  NeuralNetBase.cpp  NeuralNetBase.h  Neuron.cpp  Neuron.h  NeuronBase.cpp  NeuronBase.h  PerceptronNet.cpp  PerceptronNet.h  Pool.cpp  Pool.h  RecurrentNet.cpp  RecurrentNet.h  RecurrentNeuron.cpp  RecurrentNeuron.h  TrainBase.cpp  TrainBase.h  lodepng.cpp  main.cpp
GameEngine/: .gitignore  README.md
GameEngine/project/: CMakeLists.txt  build_linux  build_win.bat
GameEngine/resources/Shader/: basic.frag  basic.vert  text.frag  text.vert
GameEngine/src/: BatchRenderer2D.cpp  BatchRenderer2D.h  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Engine.cpp  Engine.h  Font.cpp  Font.h  FontManager.cpp  FontManager.h  GraphicsAPI.cpp  GraphicsAPI.h  Group.cpp  Group.h  IndexBuffer.cpp  IndexBuffer.h  Input.cpp  Input.h  Label.cpp  Label.h  Layer.cpp  Layer.h  Logging.cpp  Logging.h  MainWindow.cpp  MainWindow.h  Renderable2D.cpp  Renderable2D.h  Renderer2D.h  Shader.cpp  Shader.h  SimpleRenderer2D.cpp  SimpleRenderer2D.h  Sprite.cpp  Sprite.h  StaticSprite.cpp  StaticSprite.h  SysStats.h  (+9 more)
GameEngine/src/Math/: Math.h  Matrix4.h  Quaternion.cpp  Quaternion.h  Vector2.h  Vector3.h  Vector4.h
LoadDLL/: DLLTest.sln  README.md
LoadDLL/DLLTest/: DLLInterface.h  DLLLoad.cpp  DLLLoad.h  DLLTest.vcxproj  DLLTest.vcxproj.filters
LoadDLL/mainDLLTest/: main.cpp  mainDLLTest.vcxproj  mainDLLTest.vcxproj.filters
LoggingHandler/: LoggingHandler.cpp  LoggingHandler.h  README  README.md  main.cpp
Vulkan_SDL/: Camera.cpp  Camera.h  README.md  VulkanBase.cpp  VulkanBase.h  VulkanDebug.cpp  VulkanDevice.hpp  VulkanInitializers.hpp  VulkanStuff.cpp  VulkanStuff.h  VulkanSwapChain.hpp  compileShaders.bat  main.cpp
